// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/maintenance/machines > filtros y maestro de taller > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "etapa_ruta_maquina": true,
            "falla_maquina": true,
            "mantenimiento_preventivo": true,
          },
        },
      },
      "orderBy": [
        {
          "estado": "asc",
        },
        {
          "nombre": "asc",
        },
      ],
      "where": {
        "AND": [
          {
            "OR": [
              {
                "nombre": {
                  "contains": "torno",
                  "mode": "insensitive",
                },
              },
              {
                "codigo_interno": {
                  "contains": "torno",
                  "mode": "insensitive",
                },
              },
            ],
          },
          {
            "tipo": "torno",
          },
          {
            "ubicacion": "nave 1",
          },
          {
            "estado": "operativa",
          },
        ],
      },
    },
    "prisma": "maquina.findMany",
  },
  {
    "args": {
      "distinct": [
        "tipo",
      ],
      "orderBy": {
        "tipo": "asc",
      },
      "select": {
        "tipo": true,
      },
    },
    "prisma": "maquina.findMany",
  },
  {
    "args": {
      "distinct": [
        "ubicacion",
      ],
      "orderBy": {
        "ubicacion": "asc",
      },
      "select": {
        "ubicacion": true,
      },
      "where": {
        "ubicacion": {
          "not": null,
        },
      },
    },
    "prisma": "maquina.findMany",
  },
]
`;

exports[`/dashboard/maintenance/machines > filtros y maestro de taller > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/maintenance">Mantenimiento</a>
</li>
<li>
<svg/>
<span aria-current="page">Máquinas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Máquinas</h1>
<p>Consulta máquinas del taller, estado operativo, ubicación, código interno y trazabilidad relacionada.</p>
</div>
</div>
</div>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Maquinas registradas</div>
</div>
</div>
<div>
<p>2</p>
<p>Total de equipos registrados.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Operativas</div>
</div>
</div>
<div>
<p>0</p>
<p>Disponibles para producción.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Inactivas</div>
</div>
</div>
<div>
<p>0</p>
<p>Fuera de operación.</p>
</div>
</div>
</section>
<div>
<div>
<div>Filtros de búsqueda</div>
</div>
<div>
<form action="/dashboard/maintenance/machines">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar maquina..." name="q" value="torno"/>
</div>
<div>
<label for="type">Tipo</label>
<select id="type" name="type">
<option value="">Todos los tipos</option>
<option value="tipo-1">tipo-1</option>
<option value="tipo-2">tipo-2</option>
</select>
</div>
<div>
<label for="location">Ubicación</label>
<select id="location" name="location">
<option value="">Todas las ubicaciones</option>
<option value="ubicacion-1">ubicacion-1</option>
</select>
</div>
<div>
<label for="status">Estado</label>
<select id="status" name="status">
<option value="">Todos los estados</option>
<option value="operativa" selected="">Operativa</option>
<option value="en_reparacion">En mantenimiento</option>
<option value="dada_de_baja">Fuera de servicio</option>
<option value="inactiva">Inactiva</option>
</select>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/maintenance/machines">Limpiar</a>
</div>
</form>
</div>
</div>
<div>
<div>
<div>Maquinas registradas</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Máquina</th>
<th>Tipo</th>
<th>Ubicación</th>
<th>Código interno</th>
<th>Registro</th>
<th>Fallas</th>
<th>Preventivos</th>
<th>Etapas</th>
<th>Estado</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_maquina-1</td>
<td>nombre-1<p>observaciones-1</p>
</td>
<td>tipo-1</td>
<td>ubicacion-1</td>
<td>codigo_interno-1</td>
<td>01/07/2026</td>
<td>2</td>
<td>2</td>
<td>2</td>
<td>
<span data-variant="secondary">estado-1</span>
</td>
</tr>
<tr>
<td>id_maquina-2</td>
<td>nombre-2<p>Sin observaciones</p>
</td>
<td>tipo-2</td>
<td>-</td>
<td>-</td>
<td>02/07/2026</td>
<td>2</td>
<td>2</td>
<td>2</td>
<td>
<span data-variant="secondary">estado-2</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/maintenance/machines > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "etapa_ruta_maquina": true,
            "falla_maquina": true,
            "mantenimiento_preventivo": true,
          },
        },
      },
      "orderBy": [
        {
          "estado": "asc",
        },
        {
          "nombre": "asc",
        },
      ],
      "where": {},
    },
    "prisma": "maquina.findMany",
  },
  {
    "args": {
      "distinct": [
        "tipo",
      ],
      "orderBy": {
        "tipo": "asc",
      },
      "select": {
        "tipo": true,
      },
    },
    "prisma": "maquina.findMany",
  },
  {
    "args": {
      "distinct": [
        "ubicacion",
      ],
      "orderBy": {
        "ubicacion": "asc",
      },
      "select": {
        "ubicacion": true,
      },
      "where": {
        "ubicacion": {
          "not": null,
        },
      },
    },
    "prisma": "maquina.findMany",
  },
]
`;

exports[`/dashboard/maintenance/machines > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/maintenance">Mantenimiento</a>
</li>
<li>
<svg/>
<span aria-current="page">Máquinas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Máquinas</h1>
<p>Consulta máquinas del taller, estado operativo, ubicación, código interno y trazabilidad relacionada.</p>
</div>
</div>
<div>
<a data-variant="default" href="/dashboard/maintenance/machines/new">Registrar máquina</a>
</div>
</div>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Maquinas registradas</div>
</div>
</div>
<div>
<p>2</p>
<p>Total de equipos registrados.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Operativas</div>
</div>
</div>
<div>
<p>0</p>
<p>Disponibles para producción.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Inactivas</div>
</div>
</div>
<div>
<p>0</p>
<p>Fuera de operación.</p>
</div>
</div>
</section>
<div>
<div>
<div>Filtros de búsqueda</div>
</div>
<div>
<form action="/dashboard/maintenance/machines">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar maquina..." name="q" value=""/>
</div>
<div>
<label for="type">Tipo</label>
<select id="type" name="type">
<option value="" selected="">Todos los tipos</option>
<option value="tipo-1">tipo-1</option>
<option value="tipo-2">tipo-2</option>
</select>
</div>
<div>
<label for="location">Ubicación</label>
<select id="location" name="location">
<option value="" selected="">Todas las ubicaciones</option>
<option value="ubicacion-1">ubicacion-1</option>
</select>
</div>
<div>
<label for="status">Estado</label>
<select id="status" name="status">
<option value="" selected="">Todos los estados</option>
<option value="operativa">Operativa</option>
<option value="en_reparacion">En mantenimiento</option>
<option value="dada_de_baja">Fuera de servicio</option>
<option value="inactiva">Inactiva</option>
</select>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/maintenance/machines">Limpiar</a>
</div>
</form>
</div>
</div>
<div>
<div>
<div>Maquinas registradas</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Máquina</th>
<th>Tipo</th>
<th>Ubicación</th>
<th>Código interno</th>
<th>Registro</th>
<th>Fallas</th>
<th>Preventivos</th>
<th>Etapas</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_maquina-1</td>
<td>nombre-1<p>observaciones-1</p>
</td>
<td>tipo-1</td>
<td>ubicacion-1</td>
<td>codigo_interno-1</td>
<td>01/07/2026</td>
<td>2</td>
<td>2</td>
<td>2</td>
<td>
<span data-variant="secondary">estado-1</span>
</td>
<td>
<div>
<a data-variant="ghost" href="/dashboard/maintenance/machines/id_maquina-1/edit?returnTo=%2Fdashboard%2Fmaintenance%2Fmachines">Editar</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_maquina" value="id_maquina-1"/>
<button data-variant="destructive" type="submit">Inactivar</button>
</form>
</div>
</td>
</tr>
<tr>
<td>id_maquina-2</td>
<td>nombre-2<p>Sin observaciones</p>
</td>
<td>tipo-2</td>
<td>-</td>
<td>-</td>
<td>02/07/2026</td>
<td>2</td>
<td>2</td>
<td>2</td>
<td>
<span data-variant="secondary">estado-2</span>
</td>
<td>
<div>
<a data-variant="ghost" href="/dashboard/maintenance/machines/id_maquina-2/edit?returnTo=%2Fdashboard%2Fmaintenance%2Fmachines">Editar</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_maquina" value="id_maquina-2"/>
<button data-variant="destructive" type="submit">Inactivar</button>
</form>
</div>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/maintenance/machines/[id]/edit > editar con regreso al listado > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {
        "id_maquina": "MAQ00000001",
      },
    },
    "prisma": "maquina.findUnique",
  },
]
`;

exports[`/dashboard/maintenance/machines/[id]/edit > editar con regreso al listado > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/maintenance">Mantenimiento</a>
</li>
<li>
<svg/>
<a href="/dashboard/maintenance/machines?status=operativa">Máquinas</a>
</li>
<li>
<svg/>
<span aria-current="page">Editar máquina</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Editar máquina</h1>
<p>Actualiza datos maestros de la máquina sin modificar fallas, reparaciones ni mantenimientos preventivos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a máquinas">
<svg/>Volver a máquinas</button>
<span data-variant="default">Solo ADMIN</span>
</div>
</div>
</section>
<div>
<div>
<div>Datos principales</div>
</div>
<div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_maquina" value="id_maquina-1"/>
<div>
<div>
<label for="nombre">Nombre de la maquina</label>
<input id="nombre" required="" name="nombre" value="nombre-1"/>
</div>
<div>
<label for="tipo">Tipo de maquina</label>
<select id="tipo" name="tipo" required="">
<option value="prensa">prensa</option>
<option value="cortadora">cortadora</option>
<option value="soldadora">soldadora</option>
<option value="esmeril">esmeril</option>
<option value="taladro">taladro</option>
<option value="compresora">compresora</option>
<option value="dobladora">dobladora</option>
<option value="otro">otro</option>
</select>
</div>
</div>
<div>
<div>
<label for="codigo_interno">Codigo interno</label>
<input id="codigo_interno" name="codigo_interno" value="codigo_interno-1"/>
</div>
<div>
<label for="ubicacion">Ubicacion</label>
<input id="ubicacion" name="ubicacion" value="ubicacion-1"/>
</div>
</div>
<div>
<label for="estado">Estado</label>
<select id="estado" name="estado" required="">
<option value="operativa">Operativa</option>
<option value="en_reparacion">En mantenimiento</option>
<option value="dada_de_baja">Fuera de servicio</option>
<option value="inactiva">Inactiva</option>
</select>
</div>
<div>
<label for="observaciones">Observaciones</label>
<textarea id="observaciones" name="observaciones" rows="4">observaciones-1</textarea>
</div>
<div>
<button data-variant="default" type="submit">Guardar cambios</button>
<a data-variant="outline" href="/dashboard/maintenance/machines">Cancelar</a>
</div>
</form>
</div>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/maintenance/machines/[id]/edit > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {
        "id_maquina": "MAQ99999999",
      },
    },
    "prisma": "maquina.findUnique",
  },
]
`;

exports[`/dashboard/maintenance/machines/[id]/edit > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;
